--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="og:title" content="IBM Watson Personality Insights">
+  <meta name="og:title" content="Social Lite">
   <meta name="og:description" content="Gain insight into how and why people think, act, and feel the way they do. This service applies linguistic analytics and personality theory to infer attributes from a person's unstructured text.">
   <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
   <link rel="icon" href="/images/favicon.png" type="image/png">
