Re-did homepage to match for Social Lite and addedd images

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,14 +14,14 @@
 
 <body>
   <!-- top level heading -->
-  <header class="_demo--heading">
+  <!-- <header class="_demo--heading">
     <div class="_demo--container">
       <a class="wordmark" href="http://www.ibm.com/watson/developer/">
         <span class="wordmark--left"><$= __("header-ibm") $></span>
         <span class="wordmark--right"><$= __("header-wdc") $></span>
       </a>
     </div>
-  </header>
+  </header> -->
   <div class="_demo--banner">
     <div class="_demo--container">
       <div class="banner--service-icon-container">
@@ -33,9 +33,6 @@
         </h1>
         <div class="banner--service-description">
           <$= __("header-description") $>
-          <div class="banner--gdpr-description">
-            <$= __("gdpr-description") $>
-          </div>
         </div>
         <div class="banner--service-resource">
           <span class="icon icon-link"></span>
@@ -45,9 +42,9 @@
           <li class="base--li banner--service-link-item">
             <a href="https://cloud.ibm.com/apidocs/personality-insights" class="base--a"><$= __("header-apiref") $></a>
           </li>
-          <li class="base--li banner--service-link-item">
+          <!-- <li class="base--li banner--service-link-item">
             <a href="https://cloud.ibm.com/docs/services/personality-insights/getting-started.html" class="base--a"><$= __("header-documentation") $></a>
-          </li>
+          </li> -->
           <li class="base--li banner--service-link-item">
             <a href="https://github.com/watson-developer-cloud/personality-insights-nodejs" class="base--a"><$= __("header-fork") $></a>
           </li>
