--- a/public/css/style.css
+++ b/public/css/style.css
@@ -406,7 +406,7 @@ body {
 .base--STYLED h2 {
   font-size: 1.95312em;
   font-weight: 700;
-  color: #d74108; }
+  color: #000000; }
 
 .base--h3,
 .base--STYLED h3 {
@@ -710,7 +710,7 @@ body {
   .base--a:hover,
   .base--STYLED a:hover, .base--a:focus,
   .base--STYLED a:focus {
-    color: #aeaeae; }
+    color: #000000; }
 
 .base--em,
 .base--STYLED em {
@@ -723,7 +723,7 @@ body {
 .base--p,
 .base--STYLED p {
   font-size: 1em;
-  color: #5a5a5a; }
+  color: #000000; }
 
 .base--code,
 .base--STYLED code {
@@ -1127,9 +1127,9 @@ pre[class*=" language-"] {
       display: inline-block;
       margin-right: 1rem; } }
 
-.banner--gdpr-description {
+/* .banner--gdpr-description {
   margin-top: 0.5rem;
-  font-size: 80%}
+  font-size: 80%} */
 
 .tab-panels {
   background-color: #f4f4f4;
@@ -1138,7 +1138,7 @@ pre[class*=" language-"] {
   margin-top: 2rem;
   position: relative; }
   .tab-panels--tab-list {
-    border-bottom: 2px solid #ececec;
+    border-bottom: 2px solid #000000;
     margin-top: 0rem; }
   .tab-panels--tab-list-item {
     display: inline-block; }
@@ -1147,11 +1147,11 @@ pre[class*=" language-"] {
     text-decoration: none;
     padding: 0 1rem 1rem; }
     .tab-panels--tab:focus, .tab-panels--tab:hover {
-      border-bottom: 6px solid #6d120f;
-      color: #6d120f; }
+      border-bottom: 6px solid #000000;
+      color: #000000; }
     .tab-panels--tab.active {
       font-weight: 700;
-      border-bottom: 6px solid #a53725; }
+      border-bottom: 6px solid #000000; }
   .tab-panels--tab-content .base--textarea {
     min-height: 11.7rem; }
   .tab-panels--tab-pane {
@@ -1164,7 +1164,7 @@ pre[class*=" language-"] {
   background-color: #ececec;
   height: 0rem;
   width: 100%;
-  border-bottom: 1px solid #323232;
+  border-bottom: 1px solid #000000;
   position: relative; }
   .percent-bar--meter {
     width: 100%;
