--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -46,10 +46,10 @@
             <a href="https://cloud.ibm.com/docs/services/personality-insights/getting-started.html" class="base--a"><$= __("header-documentation") $></a>
           </li> -->
           <li class="base--li banner--service-link-item">
-            <a href="https://github.com/watson-developer-cloud/personality-insights-nodejs" class="base--a"><$= __("header-fork") $></a>
+            <a href="https://github.com/osakipokima/Social-Lite" class="base--a"><$= __("header-fork") $></a>
           </li>
           <li class="base--li banner--service-link-item">
-            <a href="https://cloud.ibm.com/registration/?target=%2Fcatalog%2Fservices%2Fpersonality-insights%3FhideTours%3Dtrue%26cm_mmc%3D-_-Watson%2BCore_Watson%2BCore%2B-%2BPlatform-_-WW_WW-_-wdc-ref%26cm_mmc%3D-_-Watson%2BCore_Watson%2BCore%2B-%2BPlatform-_-WW_WW-_-wdc-ref%26cm_mmca1%3D000000OF%26cm_mmca2%3D10000409" class="base--button base--button_fill"><$= __("header-bluemix") $></a>
+            <a href="https://devpost.com/software/socialliteapp" class="base--button base--button_fill"><$= __("header-bluemix") $></a>
           </li>
         </div>
       </div>
